--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 * {
   box-sizing: border-box;
   margin: 0;
@@ -26,6 +28,7 @@ body {
 #btn {
   border-radius: 5px;
   font: Helvetica;
+  transition: 0.2s ease-out;
 }
 
 #btn:hover {
@@ -54,6 +57,7 @@ body {
 
 .textbox {
   width: 90%;
+  font: 'Source Code Pro';
 }
 
 input {
@@ -65,12 +69,14 @@ p {
   color: #0b2d32;
   margin: 1.5vw 1.5vw 0 1.5vw;
   font-size: 20px;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Oswald, Arial, sans-serif;
 }
 
 textarea {
   background-color: #9db5b2;
-  color: #0b2d32;
+  border:1.5px solid #84a19c;
+  border-radius: 4px;
+  padding: 5px 5px;
   height: 80vh;
   width: 90%;
   max-width: 100%;
